--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,7 @@
  display: flex;
  flex-direction: column;
  align-items: center;
- height: 100vh;
+ min-height: 100vh;
  width: 100%;
  padding: 12px 36px;
  gap: 10px;
@@ -17,9 +17,16 @@
  background-image: linear-gradient(0.149turn,rgba(8,40,105,1) 0%,rgba(25,63,159,1) 60%,rgba(8,38,92,1) 100%);
 }
 
-.main-container {
+.main {
  max-width: 1280px;
  width: 100%;
+}
+
+.main__menu {
+ display: flex;
+ justify-content: space-between;
+ background: rgb(22 60 151 / 10%);
+
 }
 
 @media screen and (max-width: 550px) {
