--- a/src/components/CreateNewNoteItemForm/index.css
+++ b/src/components/CreateNewNoteItemForm/index.css
@@ -19,5 +19,10 @@
     padding: 0 12px;
     color: white;
     background-image: linear-gradient(0.149turn,rgba(8,40,105,1) 0%,rgba(25,63,159,1) 60%,rgba(8,38,92,1) 100%);
+    cursor: pointer;
+}
 
+.create-note-form_submit-button:disabled {
+    opacity: 0.5;
+    cursor: default;
 }
