--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,6 +29,13 @@
 
 }
 
+@media screen and (max-width: 625px) {
+ .main__menu {
+  flex-direction: column;
+  align-items: end;
+ }
+}
+
 @media screen and (max-width: 550px) {
  .app {
   padding: 6px 12px;
